jumbotron image toegevoegd

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-
-body{
-
+.header{
+	background-image: url("../graphics/header.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: #fff;
 }
 
 @media only screen and (min-width : 576px){	
