--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,23 @@
-.banner{
+.jumbo{
 	background-image: url("../graphics/header.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	color: #fff;
+}
+
+/*fixed menu*/
+.banner--clone {
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background: #c95a5d;
+	transform: translateY(-100%);
+	transition: all 300ms ease-in-out;
+	width: 100%;
+}
+.banner--stick {
+	transform: translateY(0%);
 }
 
 @media only screen and (min-width : 576px){	
